--- a/src/main/config/application.properties
+++ b/src/main/config/application.properties
@@ -1,17 +1,60 @@
+# [website]
+# swagger:http://localhost:8001/usermanagement/swagger-ui.html#
+# consul:
+# rabbitMQ:
+#
+
 # #####################################################
 # ##################### project #######################
 # #####################################################
 spring.profiles.active=dev
+db.name=ac_usermanagement_20210811
 
 
 # #####################################################
 # ##################### static ########################
 # #####################################################
 
+# [server]
+server.port=10000
+server.component=ac_usermanagement
+
+
+
+
+
+
+
 
 # #####################################################
 # ##################### common ########################
 # #####################################################
+# [server]
+server.servlet.session.timeout=900
+server.servlet.context-path=/${server.component}
+server.tomcat.threads.max=15
+server.tomcat.uri-encoding=UTF-8
+
+# [postgresql config]
+spring.datasource.dialect=pgsql
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://47.98.35.29:5432/${db.name}
+spring.datasource.username=postgres
+spring.datasource.password=ActiveClub12345+
+spring.datasource.min-idle=15
+spring.datasource.mapUnderscoreToCamelCase=true
+
+# [flyway config:base]
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=false
+#spring.flyway.baseline-version=1
+spring.flyway.placeholder-replacement=false
+spring.flyway.locations=classpath:db/migration
+
+# [mybatis config]
+mybatis.type-aliases-package=com.activeclub.core.${server.component}.bean
+mybatis.mapper-locations=classpath*:mapper/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
 
 
 
