[modify] 完善用户接口4

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
     </properties>
     <dependencies>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${httpclient.version}</version>
+        </dependency>
+
         <!-- activeclub公式的工具类 -->
         <dependency>
             <groupId>com.activeclub</groupId>
