--- a/src/main/config/application.properties
+++ b/src/main/config/application.properties
@@ -8,7 +8,7 @@
 # ##################### project #######################
 # #####################################################
 spring.profiles.active=dev
-db.name=ac_usermanagement_20210811
+db.name=usermanagement
 
 
 # #####################################################
@@ -17,7 +17,7 @@ db.name=ac_usermanagement_20210811
 
 # [server]
 server.port=10000
-server.component=ac_usermanagement
+server.component=usermanagement
 
 
 
@@ -40,7 +40,8 @@ spring.datasource.dialect=pgsql
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://47.98.35.29:5432/${db.name}
 spring.datasource.username=postgres
-spring.datasource.password=ActiveClub12345+
+#spring.datasource.password=ActiveClub12345+
+spring.datasource.password=docker-postgres
 spring.datasource.min-idle=15
 spring.datasource.mapUnderscoreToCamelCase=true
 
